appId: ${APP_ID}
tags:
  - auth
  - parallel
---
- launchApp:
    clearState: true
    clearKeychain: true
    arguments:
      isE2ETest: true
- tapOn: '.*I already have one'
- tapOn: 'Import a Secret Phrase or Private Key.*'
- tapOn: 'Enter a recovery phrase or private key'
- inputText: ${DEV_PKEY}
- tapOn: 'Continue'
- assertVisible:
    id: wallet-info-input
- inputText: 'Test Wallet'
- tapOn: 'Import Wallet'
- runFlow: ../utils/MaybeSetupPin.yaml
- assertVisible:
    id: wallet-screen
