# flow.yaml

appId: me.rainbow
---
- launchApp:
    appId: me.rainbow
    clearState: true
    clearKeychain: true
    permissions: { all: deny }

- runScript: # 10 sec wait
    file: helpers/sleep.js
    env:
      seconds: 10 # adjust wait time here

- assertVisible:
    id: welcome-screen

- tapOn:
    id: already-have-wallet-button

- assertVisible:
    id: add-wallet-sheet

- tapOn:
    id: restore-with-key-button

- assertVisible:
    id: import-sheet

- tapOn:
    id: import-sheet-input

- inputText: '0x30cf0b4e692056ce62de7b9a9eb40e97feaf1ee191ac22b33346fae13ae2e61b' # empty wallet pkey

- assertVisible:
    id: import-sheet-button
    enabled: true

- tapOn:
    id: import-sheet-button

- assertVisible:
    id: wallet-info-modal

- tapOn:
    id: wallet-info-submit-button
    enabled: true

- runScript: # 10 sec wait
    file: helpers/sleep.js
    env:
      seconds: 10 # adjust wait time here

- assertVisible:
    text: '0x36...a62F'
