appId: ${APP_ID}
env:
  PKEY: ${DEV_PKEY}
  NAME: 'Test Wallet'
---
- retry:
    maxRetries: 3
    commands:
      - tapOn: 'I already have one'
- tapOn: 'Import a Secret Phrase or Private Key'
- tapOn: 'Enter a recovery phrase or private key'
- inputText: ${DEV_PKEY}
- tapOn: 'Continue'
- assertVisible:
    id: wallet-info-input
- inputText: 'Test Wallet'
- tapOn: 'Import Wallet'
- runFlow: MaybeSetupPin.yaml
- assertVisible:
    id: wallet-screen
