appId: ${APP_ID}
tags:
  - browser
  - parallel
---
- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true
          clearKeychain: true
          arguments:
            isE2ETest: true
      - runFlow: ../utils/Prepare.yaml
      - runFlow: ../utils/ImportWalletWithKey.yaml

      # Navigate to browser
      - runScript:
          file: ../utils/coordinates.js
      - tapOn:
          point: ${output.tabCoordinates.browserTab}

      # connect to bx-test-dapp
      - tapOn:
          text: '.*Search or enter website.*'
      - assertVisible: 'Find apps and more'
      - inputText: 'https://bx-test-dapp.vercel.app/'
      - pressKey: 'Enter'
      # tap on wallet pfp to open the control panel
      - tapOn:
          id: account-icon
      - tapOn:
          id: connect-button
      # control panel assertions
      - assertVisible:
          text: '.*BX Test Dapp.*'
      - assertVisible:
          text: '.*Disconnect'
      # tap somewhere arbitrary to close the control panel sheet
      - tapOn:
          point: 50%, 20%
      # Maestro can't interact with the webview reliably on iOS so skip
      - runFlow:
          when:
            platform: Android
          commands:
            # eth_signMessage
            # tap on send button to initiate a eth_signTransaction
            - tapOn:
                id: signTypedData
            # sign transaction assertions
            - assertVisible:
                text: 'Message Request'
            - assertVisible:
                text: '.*Simulated Result.*'
            - assertVisible:
                text: '.*Confirm.*'
            # sign transaction
            - longPressOn:
                id: sign-transaction-action-button
            - runFlow: ../utils/MaybeSetupPin.yaml
            # assert that the typed message data signature is visible
            - assertVisible:
                text: '.*typed message data sig.*'

            # eth_signTransaction
            # tap on send button to initiate a eth_signTypedData
            - tapOn:
                id: signTx
            # sign transaction assertions
            - assertVisible:
                text: 'Message Request'
            - assertVisible:
                text: '.*rainbow rocks.*'
            - assertVisible:
                text: '.*Confirm.*'
            # sign transaction
            - longPressOn:
                id: sign-transaction-action-button
            - runFlow: ../utils/MaybeSetupPin.yaml
            # assert that the signed message data signature is visible
            - assertVisible:
                text: '.*sign message data sig.*'
