appId: ${APP_ID}
tags:
  - auth
  - parallel
---
- launchApp:
    clearState: true
    clearKeychain: true
    arguments:
      isE2ETest: true
- runFlow: ../../utils/Prepare.yaml
- extendedWaitUntil:
    visible:
      id: welcome-screen
    timeout: 60000
- tapOn: '.*Get a new wallet'
- runFlow: ../../utils/MaybeSetupPin.yaml
- runFlow: ../../utils/HandleOptionalNotificationPermission.yaml

# Check wallet screen exists and has expected elements
- assertVisible:
    id: wallet-screen
- assertVisible:
    id: copy-address-button
- extendedWaitUntil:
    visible:
      id: receive-card
    timeout: 30000
