appId: ${APP_ID}
tags:
  - wallet
  - parallel
---
- launchApp:
    clearState: true
    clearKeychain: true
    arguments:
      isE2ETest: true
- runFlow: ../../utils/Prepare.yaml
- extendedWaitUntil:
    visible:
      id: welcome-screen
    timeout: 60000
- tapOn: '.*I already have one'
- tapOn:
    id: watch-address-button
- tapOn: 'Enter an Ethereum address or ENS name'
- inputText: 'rainbowtestwallet.eth'
- tapOn: 'Continue'
- tapOn: 'Import Wallet'
- runFlow: ../../utils/MaybeSetupPin.yaml
- runFlow: ../../utils/HandleOptionalNotificationPermission.yaml
- assertVisible:
    id: wallet-screen
